2012-04-02 Andrea Del Prete <andrea.delprete@iit.it>
        * iDynInv.cpp: improving implementation of wrench and kinematics propagation (for performance)

2012-04-02 Andrea Del Prete <andrea.delprete@iit.it>
        * iDyn.cpp: storing rototranslation matrix in iDynLink for performance
                    
2012-04-02 Andrea Del Prete <andrea.delprete@iit.it>
        * iDyn.cpp: add methods to compute lagrangian dynamics (mass matrix, coriolis
                    and centrifugal torques, gravity torques)

2011-03-03 Matteo Fumagalli <matteo.fumagalli@iit.it>
	   * iDyn.cpp: modified kinematic parameter on iCubArmDyn and iCubArmNoTorsoDyn

2010-11-09 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iDyn.h: now iDynLimb is public inherited from iDynChain

2010-05-26 Serena Ivaldi <serena.ivaldi@iit.it> and Matteo Fumagalli <matteo.fumagalli@iit.it>
	   * First release published on the repository

2010-05-27 Serena Ivaldi <serena.ivaldi@iit.it>
	   * added iDynInvSensor-Arm/Leg to iDynInv

2010-06-01 Ugo Pattacini <ugo.pattacini@iit.it>
	   * Ported to iCub/main

2010-06-04 Serena Ivaldi <serena.ivaldi@iit.it>
	* added getForceMomentEndEffector to iDynChain and iDynSensor
	* this version works perfectly with TorqueObserver and WrenchObserver

2010-06-04 Serena Ivaldi <serena.ivaldi@iit.it>
	* added kinematic/wrench mode to iDynChain. changes made in all derived iDynLimbs and OneChain to comply
	* with the new computational modalities

2010-06-16 Serena Ivaldi <serena.ivaldi@iit.it>
	* added iCubWholeBody, UpperTorso and LowerTorso to iDynBody

2010-07-08 Serena Ivaldi <serena.ivaldi@iit.it>
	* added tutorials: multiLimbJacobian, wholeBody_FTsensor_estimate
	* added support for multi-link Jacobian to iDynNodes

2010-07-09 Serena Ivaldi <serena.ivaldi@iit.it>
	* removed dependency from iDynFwd, whose classes are now incorporated in iDynInv

